--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <p>4. CICD</p>
                 <p>5. Docker</p>
                 <p>6. Kubernetes</p>
+                <p>7. ArgoCD</p>
             </div>
             <button>Add to Cart</button>
         </div>
