--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             background-color: #add8e6; /* Light blue background for Devops Courses */
         }
         .cloud-courses {
-            background-color: #90ee90; /* Light green background for Cloud Courses */
+            background-color: #efa0f7; /* Light green background for Cloud Courses */
         }
         .course-list {
             padding-left: 20px;
